# agentic_chatbot

./: .env  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/agents/: __init__.py
backend/agents/guardrail_agents/: guardrail_agent.py
backend/agents/speacial_agents/: agents.py
backend/helpers/: config.py  prompt_loader.py
backend/prompts/: triage_agent_prompt.md
backend/routers/: chat.py
backend/services/: agent_runner.py
backend/tools/: __init__.py  tools.py
frontend/: app.py
